GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  dd status=progress now just counts seconds; e.g., it outputs "6 s"
  consistently rather than sometimes outputting "6.00001 s".
  [bug introduced in coreutils-8.24]

  df non longer interacts with excluded file system types, so for example
  specifying -x nfs will no longer hang with problematic nfs mounts.
  [bug introduced in coreutils-8.21]

  split no longer exits when invocations of a --filter return EPIPE.
  [bug introduced in coreutils-8.26]

  md5sum --check no longer incorrectly enables BSD reversed format mode when
  ignoring some non checksum lines.  This also affects sha*sum and b2sum.
  [bug introduced in coreutils-8.14]

  tail -F 'dir/file' now monitored even when 'dir' is replaced.
  [bug introduced with inotify support added in coreutils-7.5]

** New features

  expand and unexpand now support specifying an offset for tab stops
  by prefixing the last specified number like --tabs=1,+8 which is
  useful for visualizing diff output for example.

  split supports a new --hex-suffixes[=from] option to create files with
  lower case hexadecimal suffixes, similar to the --numeric-suffixes option.


* Noteworthy changes in release 8.27 (2017-03-08) [stable]

** Bug fixes

  cp --parents will now set an SELinux context for created directories,
  as appropriate for the -a, --preseve=context, or -Z options.
  [bug present since SELinux support added in coreutils-6.10]

  date again converts from a specified time zone.  Previously output was
  not converted to the local time zone, and remained in the specified one.
  [bug introduced in coreutils-8.26]

  Commands like 'cp --no-dereference -l A B' are no longer quiet no-ops
  when A is a regular file and B is a symbolic link that points to A.
  [bug introduced in fileutils-4.0]

  factor no longer goes into an infinite loop for certain numbers like