@@ -4,6 +4,10 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  date and touch no longer overwrite the heap with large
+  user specified TZ values (CVE-2017-7476).
+  [bug introduced in coreutils-8.27]
+
   dd status=progress now just counts seconds; e.g., it outputs "6 s"
   consistently rather than sometimes outputting "6.00001 s".
   [bug introduced in coreutils-8.24]
